update - api - update logique faq
